--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,14 @@
-Very important:
+High priority:
 - Fix initialization radius (currently hardcoded in...)
 
-Important:
+Medium Priority:
 - Fix coupling between channel box and external channel walls force (the implementation should be improved)
 - Parallelize with OpenMP
 - Parallelize with CUDA
 - Fix the comments of the different files
 - Optimize printing of configurations (files too large...)
 
-Less relevant:
+Low Priority:
 - Parallelize with MPI
 - Change OXLOG
 - Uniformize code conventions (put functions and variables as snake_case, classes as PascalCase, and macros as UPPERCASE)
